can now set a default pose that loads from a fbx animation

--- a/config.json
+++ b/config.json
@@ -4,6 +4,7 @@
   "PIPER_PATH": "/home/andre/piper/piper",
   "VOICE_MODEL": "/home/andre/en_US-amy-medium.onnx",
   "defaultModelUrl": "public/assets/vrm/AvatarSample_A.vrm",
+  "defaultPose": "public/assets/animations/Idle.fbx",
   "animationUrls": [
     "public/assets/animations/Idle.fbx",
     "public/assets/animations/Breathing Idle.fbx"
