--- a/config.json
+++ b/config.json
@@ -7,7 +7,8 @@
   "defaultPose": "public/assets/animations/Idle.fbx",
   "animationUrls": [
     "public/assets/animations/Idle.fbx",
-    "public/assets/animations/Breathing Idle.fbx"
+    "public/assets/animations/Breathing Idle.fbx",
+    "public/assets/animations/VRm-idle.fbx"
   ],
   "eyeTrackingEnabled": true,
   "blink": {
